# compound-ralph

./: AGENTS.md  CHRONICLER_INTEGRATION.md  CHRONICLER_USAGE.md  Cargo.toml  DEVELOPMENT.md  ISSUES.md  PROMPT.md  README.md  USING_CHRONICLER.md  chronicler.hat.md  hats.yml  pyproject.toml  ralph.kiro.yml  ralph.yml  release.sh
.github/workflows/: ci.yml  publish.yml
.hooks/: pre-commit
bench/: .gitignore  tasks.json
bench/tasks/fizzbuzz-tdd/: test_fizzbuzz.py
crates/ralph-adapters/src/: auto_detect.rs  claude_stream.rs  cli_backend.rs  cli_executor.rs  lib.rs  pty_executor.rs  stream_handler.rs
crates/ralph-bench/src/: main.rs
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: bot.rs  init.rs  main.rs  presets.rs  sop_runner.rs
crates/ralph-cli/tests/: integration_clean.rs  integration_resume.rs
crates/ralph-core/src/: config.rs  event_logger.rs  event_loop.rs  event_parser.rs  event_reader.rs  hat_registry.rs  hatless_ralph.rs  instructions.rs  lib.rs  session_player.rs  session_recorder.rs  summary_writer.rs  task_definition.rs  task_store.rs  workspace.rs
crates/ralph-core/src/testing/: mod.rs  replay_backend.rs  scenario.rs  smoke_runner.rs
crates/ralph-core/tests/: event_loop_ralph.rs  scenarios.rs  smoke_runner.rs
crates/ralph-proto/: Cargo.toml
crates/ralph-proto/src/: event_bus.rs  hat.rs  lib.rs  ux_event.rs
crates/ralph-telegram/src/: daemon.rs  handler.rs  service.rs  state.rs
crates/ralph-tui/: Cargo.toml
crates/ralph-tui/examples/: terminal_widget_demo.rs  validate_widgets.rs
crates/ralph-tui/src/: app.rs  input.rs  lib.rs  scroll.rs  state.rs
crates/ralph-tui/src/widgets/: header.rs  mod.rs  terminal.rs
crates/ralph-tui/tests/: iteration_boundary.rs
docs/: mock-cli.md
docs/guide/: agents.md  cli-reference.md  configuration.md
presets/: COLLECTION.md  confession-loop.yml  debug.yml  docs.yml  incident-response.yml  pr-review.yml  spec-driven.yml  with-chronicler.yml
scripts/: post-build-symlink.sh  release-local.sh  setup-hooks.sh  sync-embedded-files.sh  sync-with-upstream.sh
specs/: behavioral-verification.spec.md  cli-adapters.spec.md  event-loop.spec.md  interactive-mode.spec.md  scaffolding.spec.md  v1-v2-feature-parity.spec.md
specs/adapters/: claude.spec.md  kiro.spec.md
specs/adapters/claude/: idea-honing.md
specs/interactive-mode/implementation/: plan.md
src/ralph_orchestrator/: orchestrator.py
tests/: test_metrics.py  test_orchestrator.py
tools/: evaluate-preset.sh  idle-timeout-e2e-test.code-task.md
tools/e2e/: __init__.py  conftest.py  requirements.txt  test_idle_timeout.py
tools/e2e/helpers/: __init__.py  freeze.py  llm_judge.py  tmux.py
